  applications cannot interoperate with GNUstep applications (which uses
  xdnd version 2). Xdnd version 4 and 5 are backwards compatible with
  version 3 though. (Sylvain Reynal <sreynal@nerim.net>)
- Improved Info panel layout and fonts.
- Fixed missing library paths when linking some binaries on certain
  platforms with a recent pkg-config (debian unstable/sid for one)


Changes since version 0.91.0:
.............................

- fixed crash with info panel and alt-tabbing
- updated Japanese translations (Takeo Hashimoto <HashimotoTakeo@mac.com>)
- allow disable of switch panel when SwitchPanelImages=None
- added X Input Methods support in WINGs
- fixed issues with compiling on Solaris with openwin
- reduced minimum required version number for the Xft library to 2.1.0
- fixed some compilation issues with gcc-2.9x
- removed --with-appsdir option and replaced it with --with-gnustepdir. Also,
  default installation path (for non GNUstep users) is now $(prefix)/bin
- fixed bug with infinite loop in some circumstances in fitText() in WINGs
- fixed to allow parallel builds on SMP systems using make -j
- updated Italian translation (Marco Colombo <m.colombo@ed.ac.uk>)
- applied .AppInfo --> Library path rename patch (Alex Perez <aperez@student.santarosa.edu>)
- added code to automatically update the icon paths from the old .AppInfo
  style to the new Library/WindowMaker style in WMWindowAttributes when
  Window Maker starts to make transition transparent for users.
- fixed issue with window being moved by 1 pixel up and left when the window
  move was initiated by the client
- improved hide/unhide animation for applications with multiple windows
  (only animate the active window hiding/unhiding, which makes Window Maker
  faster and more responsive for such applications). This also makes the
  restart operation much faster.
- fixed bug with windows shrinking to very small sizes when Unmaximize was
  used on them, after they were closed in a maximized state.